app/assets/stylesheets/common/base/user.scss
@use "lib/viewport";

// Common styles for "/user" section
// These styles are also used for "/groups" — test those pages if making significant changes
.user-content-wrapper {
  // Grid layout
  width: 100%;
  display: grid;
  grid-template-columns: 1fr 5fr;
  grid-template-rows: auto auto 1fr auto;
  gap: 0 0.8em;

  .user-primary-navigation {
    grid-column-start: 1;
    grid-column-end: 3;
    grid-row-start: 1;
    grid-row-end: 2;

    .horizontal-overflow-nav {
      border-block: 1px solid var(--content-border-color);
    }

    .group-dropdown {
      margin-right: 0.5em;

      .mobile-view & {
        .select-kit-header-wrapper {
          font-size: var(--font-down-1);
        }
      }
    }
  }

  .user-secondary-navigation {
    grid-column-start: 1;
    grid-column-end: 3;
    grid-row-start: 2;
    grid-row-end: 3;
    font-size: var(--font-down-1);
  }

  .user-primary-navigation,
  .user-secondary-navigation {
    display: flex;
    align-items: stretch;

    li {
      flex: 1 0 auto;

      a {
        box-sizing: border-box;
        width: 100%;
        justify-content: center;
      }
    }
  }

  .solo-preference,
  .user-content,
  .spinner {
    grid-row-start: 3;
    grid-row-end: 5;
    grid-column-start: 1;
    grid-column-end: 3;
  }

  .user-content {
    margin-top: 1em;
    min-width: 100%;
  }

  .user-additional-controls + .user-content,
  .user-secondary-navigation + .user-content {
    grid-column-start: 1;
    grid-column-end: 3;
  }

  .user-additional-controls {
    grid-row-start: 3;
    align-self: start;
    justify-self: start;
  }
}

.user-content {
  box-sizing: border-box;
  margin-top: 2em;
  background: var(--d-content-background, var(--secondary));

  .list-actions {
    display: flex;
    margin-bottom: 12px;

    .btn {
      margin-right: 12px;
    }
  }

  .paginated-topics-list {
    position: relative;

    tbody {
      border-top: none;
    }
  }

  .show-mores {
    width: 100%;

    .alert-info.clickable {
      gap: 0.5em;

      &.loading {
        color: var(--primary-medium);
        cursor: default;
      }
    }
  }

  .d-icon-heart {
    color: var(--love);
  }

  .user-notifications-filter {
    display: block;
    width: 100%;
    border-bottom: 0.5px solid var(--content-border-color);
  }
}
/* ... */

